--- a/index.html
+++ b/index.html
@@ -103,12 +103,12 @@
     </div>
 
     <div class="movie-container">
-        <iframe id="movieIframe" src="http://www.0910jzw.com/"></iframe>
+        <iframe id="movieIframe" src="https://www.ppnix.com/cn/"></iframe>
         <button class="btn exit-btn">退出观影</button>
     </div>
 
     <script>
-        const TARGET_URL = "http://www.0910jzw.com/";
+        const TARGET_URL = "https://www.ppnix.com/cn/";
 
         const [verifyContainer, movieContainer, movieIframe, enterBtn, exitBtn] = [
             document.querySelector('.verify-container'),
